utilizando variaveis e templates para melhorar arq

--- a/Vagrant/ambiente_dev/wordpress_com_ansible/teamplates/000-default.conf.j2
+++ b/Vagrant/ambiente_dev/wordpress_com_ansible/teamplates/000-default.conf.j2
@@ -10,4 +10,4 @@ vagrant@vagrant-ubuntu-trusty-64:~$ cat /etc/apache2/sites-available/000-default
         #ServerName www.example.com
 
         ServerAdmin webmaster@localhost
-        DocumentRoot /var/www/wordpress
+        DocumentRoot {{ wp_installation_dir }}
